...
  var categoryPickerView : UIPickerView!
  var timePickerView : UIPickerView!
  let videoPicker = UIImagePickerController()
  var pickedVideoURL: NSURL?
  var times: [String] = []
  var TextOrVideo: Int?
  var categories = ["Arts and Entertainment",
                    "Cars & Other Vehicles",
                    "Computers and Electronics",
                    "Conari",
                    "Education and Communications",
                    "Finance and Business",
                    "Food and Entertaining",
...
    {
      TutorialTitle.title = "Video Tutorial"
      NextButton.title = "Upload"
    }
    else
    {
      TutorialTitle.title = "Text Tutorial"
      SelectVideoButton.hidden = true
      VideoThumbnail.hidden = true
    }
    
    DifficultyStepper_.maximumValue = 5
    DifficultyStepper_.minimumValue = 1
...
        self.videoPicker.mediaTypes = [kUTTypeMovie as String]
        self.presentViewController(self.videoPicker, animated: true, completion: nil)
        
      }
    })
    
    let Library = UIAlertAction(title: "Photo Library", style: .Default, handler: {
      (alert: UIAlertAction!) -> Void in
      if(UIImagePickerController.isSourceTypeAvailable(.PhotoLibrary))
      {
        self.videoPicker.allowsEditing = true
        self.videoPicker.sourceType = .PhotoLibrary
        self.videoPicker.mediaTypes = [kUTTypeMovie as String]
        self.presentViewController(self.videoPicker, animated: true, completion: nil)
        
      }
    })
    
    let cancel = UIAlertAction(title: "Cancel", style: .Default, handler: {
      (alert: UIAlertAction!) -> Void in
    })
    
    // 4
    if(UIImagePickerController.isSourceTypeAvailable(.Camera))
    {
...
  
  override func prepareForSegue(segue: UIStoryboardSegue, sender: AnyObject?)
  {
    updateCurrentStruct();
    if current.Title.isEmpty
    {
      let alert = UIAlertController(title: "Error", message: "Please insert a Title", preferredStyle: UIAlertControllerStyle.Alert)
      alert.addAction(UIAlertAction(title: "Ok", style: UIAlertActionStyle.Default, handler: nil))
      
      // Support display in iPad
      alert.popoverPresentationController?.sourceView = self.view
      alert.popoverPresentationController?.sourceRect = CGRectMake(self.view.bounds.size.width / 2.0, self.view.bounds.size.height / 2.0, 1.0, 1.0)
      
...
